Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuneee</title>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-    <link rel="icon" href="./logo.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="logo.png" type="image/png" sizes="16x16">
     <style>
         *{
             margin: 0;
